--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-UTILS=transformations basic_utilities task loops architecture loop_metadata clean_metadata pdg_stats callgraph scheduler
+UTILS=transformations basic_utilities task loops architecture loop_metadata clean_metadata pdg_stats callgraph scheduler loop_stats
 ANALYSIS=pdg talkdown alloc_aa dataflow loop_structure
 PARALLELIZATION=parallelizer heuristics parallelization_technique dswp doall helix
 ENABLERS=enablers loop_distribution loop_unroll inliner loop_whilifier loop_invariant_code_motion scev_simplification
@@ -100,6 +100,9 @@ clean_metadata:
 	cd $@ ; ../scripts/run_me.sh
 
 pdg_stats:
+	cd $@ ; ../scripts/run_me.sh
+
+loop_stats:
 	cd $@ ; ../scripts/run_me.sh
 
 uninstall:
