Only remove guaranteeed-to-be loop carried edges using LIDS

--- a/src/loops/src/CMakeLists.txt
+++ b/src/loops/src/CMakeLists.txt
@@ -42,6 +42,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../../external/scaf/include
   ../../basic_utilities/include 
   ../../transformations/include
+  ../../dataflow/include
   ../../architecture/include 
   ../../alloc_aa/include 
   ../../pdg/include 
