LoopStats: Split a big file into multiples

--- a/src/loop_stats/src/CMakeLists.txt
+++ b/src/loop_stats/src/CMakeLists.txt
@@ -1,6 +1,11 @@
 # Sources
 set(Srcs
   LoopStats.cpp 
+  Pass.cpp
+  LoopStats_InductionVariables.cpp
+  LoopStats_Invariants.cpp
+  LoopStats_Dependences.cpp
+  LoopStats_Printer.cpp
 )
 
 # Compilation flags
