PDG: added the option of disabling SVF

--- a/src/pdg/src/CMakeLists.txt
+++ b/src/pdg/src/CMakeLists.txt
@@ -2,8 +2,11 @@
 set(Srcs 
   Pass.cpp
   PDGAnalysis.cpp
+  PDGAnalysis_embedder.cpp
   PDGAnalysis_controlDependences.cpp
   PDGAnalysis_compare.cpp
+  PDGAnalysis_memory.cpp
+  PDGAnalysis_callGraph.cpp
   AnalysisPass.cpp
   SubCFGs.cpp
   PDG.cpp
