Loop stats: improved the statistics

--- a/src/loop_stats/src/CMakeLists.txt
+++ b/src/loop_stats/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(Srcs
   LoopStats_InductionVariables.cpp
   LoopStats_Invariants.cpp
   LoopStats_Dependences.cpp
+  LoopStats_Loops.cpp
   LoopStats_Printer.cpp
 )
 
