Organization: created a structure between modules

--- a/src/tools/deadfunctioneliminator/src/CMakeLists.txt
+++ b/src/tools/deadfunctioneliminator/src/CMakeLists.txt
@@ -23,21 +23,8 @@ include(AddLLVM)
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
 include_directories(${LLVM_INCLUDE_DIRS} 
-  ../../../external/svf/include
-  ../../../external/scaf/include
-  ../../basic_utilities/include 
-  ../../transformations/include
-  ../../alloc_aa/include 
-  ../../pdg/include 
-  ../../loop_structure/include
-  ../../loops/include 
-  ../../hotprofiler/include 
-  ../../talkdown/include
-  ../../noelle/include
-  ../../dataflow/include
-  ../../callgraph/include
-  ../../scheduler/include
-  ../include/ 
+  ${CMAKE_INSTALL_PREFIX}/include
+  ${CMAKE_INSTALL_PREFIX}/include/svf
   ./ 
   )
 
