--- a/src/tools/inliner/src/CMakeLists.txt
+++ b/src/tools/inliner/src/CMakeLists.txt
@@ -25,25 +25,10 @@ include(AddLLVM)
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
 include_directories(${LLVM_INCLUDE_DIRS} 
-  ../../../external/svf/include
-  ../../../external/scaf/include
-  ../../basic_utilities/include 
-  ../../transformations/include
-  ../../task/include 
-  ../../alloc_aa/include 
-  ../../pdg/include 
-  ../../loop_structure/include
-  ../../loops/include 
-  ../../talkdown/include
-  ../../hotprofiler/include
-  ../../noelle/include
-  ../../dataflow/include
-  ../../doall/include
-  ../../parallelization_technique/include 
-  ../../heuristics/include 
-  ../../callgraph/include
-  ../../scheduler/include
-  ../include 
+  ${CMAKE_INSTALL_PREFIX}/include
+  ${CMAKE_INSTALL_PREFIX}/include/svf
+  ../include
+  ./
   )
 
 
