--- a/src/tools/loop_invariant_code_motion/src/CMakeLists.txt
+++ b/src/tools/loop_invariant_code_motion/src/CMakeLists.txt
@@ -1,13 +1,17 @@
 # Sources
 set(Srcs 
-  SCEVSimplification.cpp
+  Mem2RegNonAlloca.cpp
+  LoopInvariantCodeMotion.cpp
+  LoopInvariantHoister.cpp
+  LastLiveOutStoreHoister.cpp
+  LastLiveOutPeeler.cpp
 )
 
 # Compilation flags
 set_source_files_properties(${Srcs} PROPERTIES COMPILE_FLAGS " -std=c++17 -fPIC")
 
 # Name of the LLVM pass
-set(PassName "SCEVSimplification")
+set(PassName "LoopInvariantCodeMotion")
 
 # configure LLVM 
 find_package(LLVM REQUIRED CONFIG)
@@ -22,20 +26,8 @@ include(AddLLVM)
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
 include_directories(${LLVM_INCLUDE_DIRS} 
-  ../../../external/svf/include
-  ../../../external/scaf/include
-  ../../basic_utilities/include 
-  ../../transformations/include
-  ../../alloc_aa/include 
-  ../../pdg/include 
-  ../../loop_structure/include
-  ../../loops/include 
-  ../../hotprofiler/include 
-  ../../talkdown/include
-  ../../dataflow/include
-  ../../noelle/include
-  ../../callgraph/include
-  ../../scheduler/include
+  ${CMAKE_INSTALL_PREFIX}/include
+  ${CMAKE_INSTALL_PREFIX}/include/svf
   ../include/ 
   ./ 
   )
