--- a/src/Makefile
+++ b/src/Makefile
@@ -1,18 +1,18 @@
 UTILS=transformations basic_utilities task loops architecture loop_metadata clean_metadata pdg_stats callgraph scheduler loop_stats
 ANALYSIS=pdg talkdown alloc_aa dataflow loop_structure
 PARALLELIZATION=parallelizer heuristics parallelization_technique dswp doall helix
-ENABLERS=enablers loop_distribution loop_unroll inliner loop_whilifier loop_invariant_code_motion scev_simplification deadfunctioneliminator
+ENABLERS=loop_distribution loop_unroll loop_whilifier 
 ALL=$(UTILS) $(ANALYSIS) $(ENABLERS) $(PARALLELIZATION) hotprofiler unique_ir_marker noelle scripts
 
-all: $(ALL)
+all: $(ALL) tools
+
+tools:
+	cd $@ ; make -j
 
 scripts:
 	./scripts/installNOELLE.sh
 
 noelle:
-	cd $@ ; ../scripts/run_me.sh
-
-deadfunctioneliminator:
 	cd $@ ; ../scripts/run_me.sh
 
 unique_ir_marker:
@@ -57,12 +57,6 @@ alloc_aa:
 talkdown:
 	cd $@ ; ../scripts/run_me.sh
 
-enablers:
-	cd $@ ; ../scripts/run_me.sh
-
-inliner:
-	cd $@ ; ../scripts/run_me.sh
-
 heuristics:
 	cd $@ ; ../scripts/run_me.sh
 
@@ -81,9 +75,6 @@ doall:
 helix:
 	cd $@ ; ../scripts/run_me.sh
 
-loop_invariant_code_motion:
-	cd $@ ; ../scripts/run_me.sh
-
 loop_whilifier:
 	cd $@ ; ../scripts/run_me.sh
 
@@ -91,9 +82,6 @@ loop_distribution:
 	cd $@ ; ../scripts/run_me.sh
 
 loop_unroll:
-	cd $@ ; ../scripts/run_me.sh
-
-scev_simplification:
 	cd $@ ; ../scripts/run_me.sh
 
 loop_metadata:
@@ -119,4 +107,4 @@ clean:
 
 .PHONY: $(ALL)
 
-.PHONY: clean download uninstall
+.PHONY: clean uninstall tools
