Structure: moved passes that use Noelle to be under "tools"

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -1,4 +1,4 @@
-UTILS=transformations basic_utilities task loops architecture loop_metadata clean_metadata pdg_stats callgraph scheduler loop_stats
+UTILS=transformations basic_utilities task loops architecture clean_metadata pdg_stats callgraph scheduler
 ANALYSIS=pdg talkdown alloc_aa dataflow loop_structure
 ENABLERS=loop_distribution loop_unroll loop_whilifier 
 ALL=$(UTILS) $(ANALYSIS) $(ENABLERS) hotprofiler unique_ir_marker noelle scripts
@@ -62,16 +62,10 @@ loop_distribution:
 loop_unroll:
 	cd $@ ; ../../scripts/run_me.sh
 
-loop_metadata:
-	cd $@ ; ../../scripts/run_me.sh
-
 clean_metadata:
 	cd $@ ; ../../scripts/run_me.sh
 
 pdg_stats:
-	cd $@ ; ../../scripts/run_me.sh
-
-loop_stats:
 	cd $@ ; ../../scripts/run_me.sh
 
 clean:
