--- a/src/tools/Makefile
+++ b/src/tools/Makefile
@@ -47,9 +47,7 @@ loop_stats:
 
 clean:
 	rm -rf */build */*.json ; 
-	find ./ -name .ycm_extra_conf.py -delete ;
-	find ./ -name compile_commands.json -delete ;
-	find ./ -name .clangd -exec rm -rv {} +
+	rm -rf */build */*/*.json ; 
 
 .PHONY: $(ALL)
 
