--- a/src/tools/pdg_stats/src/CMakeLists.txt
+++ b/src/tools/pdg_stats/src/CMakeLists.txt
@@ -22,10 +22,11 @@ include(AddLLVM)
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
 include_directories(${LLVM_INCLUDE_DIRS}
-           ../../basic_utilities/include
-           ../../callgraph/include
-					 ../include
-                     )
+  ${CMAKE_INSTALL_PREFIX}/include
+  ${CMAKE_INSTALL_PREFIX}/include/svf
+	../include
+  ./
+  )
 
 # Declare the LLVM pass to compile
 add_llvm_library(${PassName} MODULE ${Srcs})
