Noelle: added the functions manager

--- a/src/core/noelle/CMakeLists.txt
+++ b/src/core/noelle/CMakeLists.txt
@@ -31,4 +31,5 @@ add_subdirectory(src)
 # Install
 install(PROGRAMS
     include/Noelle.hpp
+    include/FunctionsManager.hpp
     DESTINATION include)
