debugging and bug fixes

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -1,4 +1,4 @@
-UTILS=transformations basic_utilities task loops architecture clean_metadata callgraph scheduler
+UTILS=transformations basic_utilities task callgraph loops architecture clean_metadata scheduler
 ANALYSIS=pdg talkdown alloc_aa dataflow loop_structure
 ENABLERS=loop_distribution loop_unroll loop_whilifier 
 ALL=$(UTILS) $(ANALYSIS) $(ENABLERS) hotprofiler unique_ir_marker noelle scripts
